app/scss/sections/_home.scss
@use "../base/breakpoints" as *;

.minipod {
  display: flex;
  flex-direction: column;

  @include breakpoint(md-tablet) {
    align-items: center;
  }

  &__heading {
    font-size: 2.441rem;
    line-height: 1.1;
    letter-spacing: -1px;
  }

  &__body {
    max-width: 45ch;
    color: var(--blue-gray-600);
  }
}

/* ==============================================
   MINER MANAGEMENT SOFTWARE APPLICATION SECTION
   ============================================== */

.app {

  &--blue,
  &--white {
    clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);

    @include breakpoint(lg-tablet) {
      clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
    }

    @include breakpoint(sm-tablet) {
      clip-path: polygon(0 8%, 100% 0%, 100% 92%, 0% 100%);
    }
  }

  &--blue {
    margin-bottom: -7.6rem;
    background-color: var(--blue-600);
  }

  &--white {
    margin-bottom: -7.6rem;
    background-color: #fff;
  }

  &__container {
    display: grid;
    align-content: center;
    max-width: 1080px;
    height: 650px;
    margin: auto;
    grid-template-columns: 1fr auto;

    @include breakpoint(lg-tablet) {
      height: 1000px;
      grid-template-columns: 1fr;
    }

    @include breakpoint(md-tablet) {
      height: 900px;
    }

    @include breakpoint(sm-tablet) {
      height: 1050px;
    }
  }

  &__text {
    min-width: 45ch;
    max-width: 45ch;
    margin: 0 auto;
    padding: 0 2rem;
    transform: translateY(230px);
    justify-self: flex-end;

    @include breakpoint(lg-tablet) {
      min-width: 35ch;
      max-width: fit-content;
      transform: translateY(170px);
    }

    @include breakpoint(md-tablet) {
      min-width: auto;
      transform: translateY(150px);
    }

    @include breakpoint(sm-tablet) {
      min-width: auto;
      transform: translateY(120px);
    }
  }

  &__subheading {
    font-weight: 600;
    color: var(--blue-100);
  }

  &__subheading--blue {
    color: var(--blue-500);
  }

  &__heading {
    line-height: 1.1;
    color: #fff;
  }

  &__heading--dark-blue {
    color: var(--blue-800);
    font-weight: 700;
  }

  &__body {
    &--dark {
      color: var(--blue-gray-600);
    }

    &--light {
      color: var(--blue-100);
    }
  }

  &__mockup {
    transform: translateY(200px);
    border-radius: 10px;
    box-shadow: 0 4px 96px rgba(9, 38, 73, 0.25);

    @include breakpoint(lg-tablet) {
      border-radius: 10px;
      overflow: hidden;
      margin: 0 2rem;
      transform: translateY(225px);
    }

    @include breakpoint(md-tablet) {
      transform: translateY(195px);
    }

    @include breakpoint(sm-tablet) {
      transform: translateY(165px);
    }

    &-img {
      margin: 0;
      width: 1152px;
      height: 772px;
      border-radius: 10px;
      background-size: contain;
      background-repeat: no-repeat;

      @include breakpoint(sm-tablet) {
        width: auto;
        height: 1586px;
      }
    }

    &-img-control {
      background-image: url("../images/illustrations/app-control.png");

      @include breakpoint(sm-tablet) {
        background-image: url("../images/illustrations/app-control-mobile.png");
      }
    }

    &-img-monitor {
      background-image: url("../images/illustrations/app-monitor.png");

      @include breakpoint(sm-tablet) {
        background-image: url("../images/illustrations/app-monitor-mobile.png");
      }
    }

    &-img-alerts {
      background-image: url("../images/illustrations/app-alerts.png");

      @include breakpoint(sm-tablet) {
        background-image: url("../images/illustrations/app-alerts-mobile.png");
      }
    }
  }
}

/* ==============================================
   TESTIMONIALS SECTION
   ============================================== */

.testimonials {
  padding: 20rem 0;
  background-color: var(--blue-gray-50);

  &__container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    max-width: 1080px;
    margin: 0 auto;
    padding: 7rem 2rem;
  }

  &__heading {
    font-size: 2.441rem;
    line-height: 1;
    position: relative;
    bottom: 3px;
    letter-spacing: -1.5px;

    @include breakpoint(sm-tablet) {
      font-size: 1.953rem;
    }

    @media (max-width: 425px) {
      font-size: 1.953rem;
    }
  }

  &__subheading {
    margin-bottom: 0.5rem;
    color: var(--blue-500);
  }

  &__icon {
    overflow: visible;
  }

  &__chat-bubble {
    transition: transform 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19), visibility 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19), opacity 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19);
    transform: scale(0) rotate(-90deg);
    transform-origin: 50% 50%;
  }

  &__right-person {
    transition: transform 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19), visibility 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19), opacity 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19);
    transform: translateX(10px);
  }

  &__left-person {
    transition: transform 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19), visibility 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19), opacity 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19);
    transform: translateX(-10px);
  }

  &__list {
    display: flex;
    overflow-x: scroll;
    justify-content: center;
    gap: 30px;
    padding: 2rem;

    @media (max-width: 1100px) {
      justify-content: flex-start;
    }

    @include breakpoint(sm-mobile) {
      margin: 0 -1rem;
      padding: 2rem 1rem;
    }
  }

  &__list-item {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    width: 330px;
    min-width: 330px;
    padding: 2rem;
    color: white;
    border-radius: 10px;
    background-color: var(--blue-600);
    box-shadow: 0 6px 12px rgb(2 44 94 / 15%), 0 6px 32px -8px rgb(0 94 213 / 50%);
  }

  .list-item {
    &__body {
      font-weight: 500;
      color: var(--blue-50);
    }

    &__divider {
      height: 1px;
      background-color: var(--blue-400);
    }

    &__heading {
      font-size: 1.25rem;
      font-weight: 600;
      line-height: 1.1;
    }

    &__subheading {
      font-size: 12px;
      font-weight: 400;
      letter-spacing: 0.3px;
      color: var(--blue-200);
    }
  }
}

/* ==============================================
   COMPANY STATISTICS SECTION
   ============================================== */

.stats {
  position: relative;
  z-index: 10;

  &__container {
    margin: -13.5rem auto 0;
    padding: 7rem 2rem;

    @include breakpoint(lg-tablet) {
      margin: -12rem auto 0;
    }
  }

  &__list {
    position: relative;
    padding: 3rem 6rem;
    border-radius: 20px;
    background-color: var(--blue-900);

    @include breakpoint(lg-tablet) {
      padding: 2rem;
    }

    @include breakpoint(md-tablet) {
      flex-direction: column;
      gap: 2rem;
      padding: 2rem 3rem;
    }
  }

  &__list-item {
    position: relative;
    min-width: 200px;
    text-align: center;
  }

  .list-item {
    &__heading {
      font-size: 5rem;
      font-family: var(--heavy-wide-font);
      transition: transform 1s ease-out;
      color: var(--blue-500);

      @include breakpoint(lg-tablet) {
        font-size: 4.5rem;
      }
    }

    &__subheading {
      font-size: 0.9rem;
      font-weight: 500;
      position: absolute;
      top: 55%;
      left: 50%;
      transition: transform 1s ease-out;
      transform: translate(-50%, -50%);
      white-space: nowrap;
      letter-spacing: 2px;
      text-transform: uppercase;
      color: var(--blue-50);
      text-shadow: 0 0 6px hsla(213, 78%, 16%, 1), 0 4px 12px hsla(213, 78%, 16%, 1);

      @include breakpoint(lg-tablet) {
        font-size: 0.8rem;
      }
    }
  }
}

/* ==============================================
   PASSIVE INCOME ILLUSTRATION SECTION
   ============================================== */

.income {
  overflow: hidden;

  @include breakpoint(lg-tablet) {
    position: relative;
    margin-top: -11rem;
    margin-bottom: 6rem;
  }

  &__plug {
    transition: transform 150ms ease-in;
    transform: translate(2px);
  }

  &__img {
    position: relative;
    overflow: visible;
    margin-bottom: -183px;
    transform: translateX(0.5rem);

    @include breakpoint(lg-tablet) {
      left: 0;
      margin-bottom: -161px;
      transform: translateX(45px);
    }
  }

  &__cable {
    transition: stroke-dashoffset 10s linear;
    stroke-dashoffset: 0;
  }

  &__power {
    transition: transform 300ms ease-out;
    transform-origin: 25% 30%;

    &:hover {
      transform: scale(1.1);

      .income__power-text {
        transform: translateY(-50px);
      }

      .income__power-large-icon {
        transition: fill 300ms ease-out;
        fill: var(--yellow-500);
      }

      .income__power-small-icon {
        transition: fill 300ms ease-out;
        fill: var(--yellow-600);
      }
    }

    &-text {
      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
    }
  }

  &__minipod {
    transition: transform 300ms ease-out;
    transform-origin: 45% 40%;

    &:hover {
      transform: scale(1.1);

      .income__minipod-text {
        transform: translateY(-60px);
      }
    }

    &-text {
      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
    }
  }

  &__wallet {
    transition: transform 300ms ease-out;
    transform-origin: 75% 30%;

    &:hover {
      transform: scale(1.1);

      .income__wallet-text {
        transform: translateY(-60px);
      }

      .income__wallet-coin {
        transform: translateY(30px);

        path:nth-child(1) {
          transition: fill 300ms ease-out;
          fill: var(--yellow-600);
        }

        path:nth-child(2) {
          transition: fill 300ms ease-out;
          fill: var(--yellow-500);
        }
      }
    }

    &-text,
    &-coin {
      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
    }
  }

  &__body {
    max-width: 35ch;
    color: var(--blue-gray-600);
  }

  &__heading {
    font-size: 3rem;
    font-weight: 900;
    line-height: 1;
    margin-top: 17px;
    letter-spacing: -1.5px;

    @include breakpoint(lg-tablet) {
      font-size: 2rem;
      margin-top: 25px;
    }
  }

  &__passive {
    transition: all 150ms ease-in;
  }

  &__btn {
    margin-top: 3rem;
  }
}

